--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-    "builds": [
-      {
-        "src": "story.html",
-        "use": "@vercel/static"
-      }
-    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/story.html"
+        "dest": "/index.html"
       }
     ]
   }
