new new new w/  avif

--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,15 @@
         "use": "@vercel/static"
       },
       {
-        "src": "scripts/*",
+        "src": "*",
         "use": "@vercel/static"
       },
       {
         "src": "*.png",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.avif",
         "use": "@vercel/static"
       }
     ],
